# simple_humanoid_description

./: .git-blame-ignore-revs  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  package.xml  stack.xml
launch/: simple_humanoid_bringup.launch
simple_humanoid_description/: CMakeLists.txt  mainpage.dox  manifest.xml
simple_humanoid_description/srdf/: simple_humanoid.srdf
simple_humanoid_description/urdf/: simple_humanoid.urdf
urdf/: simple_humanoid.urdf
